# model-tampering-evals

./: .gitignore  .gitmodules  LICENSE  README.md  compile_results.py  eval.py  pyproject.toml
attacks/finetune/: finetune.py
attacks/input_space/: README.md
attacks/tampering/: finetune.py
config/: eval_config.py  model_paths.py  prefixes.py  results_config.py
data/: refusal_data_input.csv
experiments/: compile_results.py  eval.py
experiments/scripts/: eval_baseline.sh  eval_finetune.sh  eval_input_gradient_methods.sh
scripts/: eval_finetune.sh
unlearn_methods/: ga.py  repnoise.py  rmu.py
utils/: jailbreak_utils.py  unlearn_utils.py  utils.py
